--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <section class="section team-section">
         <div class="container team-container">
           <h2 class="title-page">Our Team</h2>
-          <ul class="list">
+          <ul class="list list-team">
             <li class="team-card">
               <img
                 src="./images/team1.jpg"
