--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
       </section>
       <!--Project Card-->
       <section class="section project-section">
-        <div class="container">
+        <div class="container portfolio-container">
           <h2 class="title-page">Our Portfolio</h2>
-          <ul class="list">
-            <li>
+          <ul class="list portfolio-list">
+            <li class="portfolio-card">
               <img
                 src="./images/banking.jpg"
                 alt="banking"
@@ -157,7 +157,7 @@
               <h3 class="text-title">Banking App</h3>
               <p class="text">App</p>
             </li>
-            <li>
+            <li class="portfolio-card">
               <img
                 src="./images/cashless.jpg"
                 alt="payment"
@@ -167,7 +167,7 @@
               <h3 class="text-title">Cashless Payment</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-card">
               <img
                 src="./images/meditation.jpg"
                 alt="meditation"
@@ -177,7 +177,7 @@
               <h3 class="text-title">Meditation App</h3>
               <p class="text">App</p>
             </li>
-            <li>
+            <li class="portfolio-card">
               <img
                 src="./images/taxi-servise.jpg"
                 alt="taxi-servise"
@@ -187,7 +187,7 @@
               <h3 class="text-title">Taxi Service</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-card">
               <img
                 src="./images/illustrations.jpg"
                 alt="illustrations"
@@ -197,7 +197,7 @@
               <h3 class="text-title">Screen Illustrations</h3>
               <p class="text">Design</p>
             </li>
-            <li>
+            <li class="portfolio-card">
               <img
                 src="./images/courses.jpg"
                 alt="courses"
