--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
         <div class="container advantages-container">
           <h2 class="title-advantages visually-hidden">Advantages</h2>
           <ul class="list list-advantages">
-            <li>
+            <li class="features">
               <h3 class="text-title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="features">
               <h3 class="text-title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="features">
               <h3 class="text-title">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="features">
               <h3 class="text-title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -106,8 +106,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="text-title">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+              <div class="text-card">
+                <h3 class="text-title">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -116,8 +118,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="text-title">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+              <div class="text-card">
+                <h3 class="text-title">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -126,8 +130,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="text-title">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+              <div class="text-card">
+                <h3 class="text-title">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -136,8 +142,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="text-title">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+              <div class="text-card">
+                <h3 class="text-title">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -154,8 +162,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="text-title">Banking App</h3>
-              <p class="text">App</p>
+              <div class="portfolio-text">
+                <h3 class="text-title">Banking App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -164,8 +174,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="text-title">Cashless Payment</h3>
-              <p class="text">Marketing</p>
+              <div class="portfolio-text">
+                <h3 class="text-title">Cashless Payment</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -174,8 +186,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="text-title">Meditation App</h3>
-              <p class="text">App</p>
+              <div class="portfolio-text">
+                <h3 class="text-title">Meditation App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -184,8 +198,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="text-title">Taxi Service</h3>
-              <p class="text">Marketing</p>
+              <div class="portfolio-text">
+                <h3 class="text-title">Taxi Service</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -194,8 +210,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="text-title">Screen Illustrations</h3>
-              <p class="text">Design</p>
+              <div class="portfolio-text">
+                <h3 class="text-title">Screen Illustrations</h3>
+                <p class="text">Design</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -204,8 +222,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="text-title">Online Courses</h3>
-              <p class="text">Marketing</p>
+              <div class="portfolio-text">
+                <h3 class="text-title">Online Courses</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
